--- a/src/main/resources/templates/index-detail-movie.html
+++ b/src/main/resources/templates/index-detail-movie.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h5>Il titolo del film è:</h5>
+	<h5>Il titolo del film con id: [[${id}]]</h5>
 	<h1>[[${movietitle}]]</h1>
 </body>
 </html>
