--- a/src/main/resources/templates/index-detail-song.html
+++ b/src/main/resources/templates/index-detail-song.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h5>Il titolo della cazone è:</h5>
+	<h5>Il titolo della cazone con id: [[${id}]]</h5>
 	<h1>[[${songtitle}]]</h1>
 </body>
 </html>
