--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
 </head>
+
 <body>
-	
-	<a 
-		th:fragment="button-nav(link, title)"
-		th:href="@{link}"
-		th:text="${title}"
-		class="btn btn-secondary">
-	</a>
-	
-	<a 
-		th:fragment="button-info(link, title)"
-		th:href="@{link}"
-		th:text="${title}"
-		class="btn btn-info">
-	</a>
-	
-	<div th:fragment="header">
+
+    <a th:fragment="button-nav(link, title)" th:href="${link}" th:text="${title}" class="btn btn-secondary">
+    </a>
+
+    <a th:fragment="button-info(link, title)" th:href="@{link}" th:text="${title}" class="btn btn-info">
+    </a>
+
+    <div th:fragment="header">
         <div class="container pt-3">
             <div class="row">
                 <div class="col-2">
                     <h2 class="text-red fw-bolder fs-1">BEST OF THE...</h2>
-                    
+
                 </div>
                 <div class="col d-flex justify-content-end align-items-center">
-                    <a class="btn btn-info me-5" th:href="@{/movies}">MOVIES</a>
-                    <a class="btn btn-info" th:href="@{/songs}">SONGS</a>
+                    <a class="fs-4 fw-bolder pe-5 text-decoration-none text-black" th:href="@{/}">HOME</a>
+                    <a class="fs-4 fw-bolder pe-5 text-decoration-none" th:href="@{/movies}">MOVIES</a>
+                    <a class="fs-4 fw-bolder text-decoration-none" th:href="@{/songs}">SONGS</a>
                 </div>
             </div>
         </div>
     </div>
-	
+
 </body>
+
 </html>
