--- a/src/main/resources/templates/index-detail-movie.html
+++ b/src/main/resources/templates/index-detail-movie.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" />
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
 </head>
+
 <body>
-	<h5>Il titolo del film con id: [[${id}]]</h5>
-	<h1>[[${movietitle}]]</h1>
+    <header th:insert="fragments :: header" class="mb-5"></header>
+    <div class="container">
+        <h5>Il titolo del film con id: [[${id}]]</h5>
+        <h1>[[${movietitle}]]</h1> 
+    </div>
 </body>
+
 </html>
