--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,7 +11,7 @@
     <a th:fragment="button-nav(link, title)" th:href="${link}" th:text="${title}" class="btn btn-secondary">
     </a>
 
-    <a th:fragment="button-info(link, title)" th:href="@{link}" th:text="${title}" class="btn btn-info">
+    <a th:fragment="button-info(link, title)" th:href="${link}" th:text="${title}" class="btn btn-info">
     </a>
 
     <div th:fragment="header">
